<resources>
    <string name="app_name">BankTransactions</string>
    <string name="add_transactions">Add Transactions</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
</resources>